<resources>
    <string name="app_name">FreeGank</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">保存</string>
    <string name="copy_url">复制链接</string>
    <string name="open_in_browser">用浏览器打开</string>
    <string name="has_copy_url">链接已复制。</string>
    <string name="favourite">收藏</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="prompt_username">用户名</string>
    <string name="action_sign_in_short">用户名</string>
    <string name="prompt_email">电子邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="action_sync">同步</string>
    <string name="username_title">用户名：</string>
    <string name="logout">登出</string>
    <string name="logout_with_delete_all_data">当前无网络，无法将本地数据同步到服务器。如果强制登出，将清除收藏文章数据。确定强制登出吗？</string>
    <string name="action_star">喜欢</string>
    <string name="action_my_pics">我的收藏</string>
    <string name="my_image_collection">我的图片收藏</string>
    <string name="anonymous_author">匿名</string>
    <string name="toast_unexpected_error">未知错误</string>
    <string name="change_avatar">更换头像</string>
    <string name="cancel_save_avatar_warning">丢弃当前图片？</string>
    <string name="cancel">取消</string>
    <string name="save_avatar">保存</string>
    <string name="github_path">https://github.com/freewheel70/FreeGank</string>
    <string name="title_about">关于</string>
    <string name="exit_title">退出</string>
    <string name="exit_warning">确定退出FreeGank吗？</string>
    <string name="alert_ok">确定</string>
    <string name="sync_server_success">同步成功</string>
    <string name="sync_server_fail">同步失败</string>
    <string name="favourite_blogs_title">收藏</string>
    <string name="android_blogs_title">Android</string>
    <string name="pretty_blogs_title">福利</string>
    <string name="IOS_blogs_title">IOS</string>
    <string name="front_blogs_title">前端</string>
    <string name="resource_blogs_title">拓展资源</string>
    <string name="app_blogs_title">App</string>
    <string name="video_blogs_title">视频</string>
    <string name="cool_blogs_title">瞎推荐</string>
    <string name="default_user_name">哟，你好啊！</string>
    <string name="tag_github">Github</string>
    <string name="tag_jianshu">简书</string>
    <string name="tag_wechat">微信</string>
    <string name="tag_blog">博客</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败，请稍后再试</string>
    <string name="remove_favourite_success">取消收藏成功</string>
    <string name="remove_favourite_fail">取消收藏失败，请稍后再试</string>
    <string name="add_favourite_success">收藏成功</string>
    <string name="add_favourite_fail">收藏失败，请稍后再试</string>
    <string name="save_image_title">保存图片</string>
    <string name="save_image_hint">保存此图片到您的手机上？</string>
    <string name="alert_cancel">取消</string>
    <string name="no_content_in_page">啊，内容不见了，下拉界面刷新一下吧！</string>
    <string name="no_favourite_content_warning">O.O 你还没收藏任何文章，快快去收藏吧！</string>
    <string name="network_reuqest_title">数据请求错误</string>
    <string name="network_reuqest_error_warning">啊！出错了！请把后面的内容告诉程序猿——</string>
    <string name="title_sync_all">同步所有</string>


</resources>
