<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".profile.ProfilePageActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/app_name"
            app:layout_collapseMode="parallax"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     android:layout_marginTop="120dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:id="@+id/username_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/avatar"
            android:layout_centerHorizontal="true">


            <TextView
                android:textSize="22sp"
                android:id="@+id/username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_title" />

            <TextView
                android:textSize="22sp"
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/username_title"
                android:hint="@string/prompt_username"
                android:singleLine="true"
                android:text="hong1" />

        </RelativeLayout>


        <Button
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:minHeight="0dp"
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username_box"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"
            android:background="@drawable/bound_button_bg"
            android:text="@string/logout"
            android:textColor="@color/WHITE"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
